--- a/app/views/my-tasks-using-tl/claim-details/bluezone-process-1.html
+++ b/app/views/my-tasks-using-tl/claim-details/bluezone-process-1.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  I can't do this task
+  Update ceased to care details
 {% endblock %}
 
 
@@ -121,63 +121,66 @@
   <div class="govuk-grid-column-full">
 
 
-<dl class="govuk-summary-list">
-  <div class="govuk-summary-list__row">
-    <dt class="govuk-summary-list__key" style="width:60%;">
-      Name of the person being cared for
-    </dt>
-    <dd class="govuk-summary-list__value">
-      Morris Watsica
-    </dd>
+    <dl class="govuk-summary-list">
+      <div class="govuk-summary-list__row">
+        <dt class="govuk-summary-list__key" style="width:60%;">
+          Name of person being cared for
+        </dt>
+        <dd class="govuk-summary-list__value">
+          Morris Watsica
+        </dd>
 
-  </div>
-  <div class="govuk-summary-list__row">
-    <dt class="govuk-summary-list__key">
-      Do they have a National Insurance number?
-    </dt>
-    <dd class="govuk-summary-list__value">
-        No
-    </dd>
+      </div>
+      <div class="govuk-summary-list__row">
+        <dt class="govuk-summary-list__key">
+          Do they have a National Insurance number?
+        </dt>
+        <dd class="govuk-summary-list__value">
+            No
+        </dd>
 
-  </div>
-  <div class="govuk-summary-list__row">
-    <dt class="govuk-summary-list__key">
-      Date of birth
-    </dt>
-    <dd class="govuk-summary-list__value">
-      14 April 1971
-    </dd>
+      </div>
+      <div class="govuk-summary-list__row">
+        <dt class="govuk-summary-list__key">
+          Date of birth of the person cared for
+        </dt>
+        <dd class="govuk-summary-list__value">
+          14 April 1971
+        </dd>
 
-  </div>
-  <div class="govuk-summary-list__row">
-    <dt class="govuk-summary-list__key">
-      Carer lives at the same address?
-    </dt>
-    <dd class="govuk-summary-list__value">
-      Yes
-    </dd>
+      </div>
+      <br><br>
+       <p class="govuk-heading-m">Carer information</p>
 
-  </div>
-  <div class="govuk-summary-list__row">
-    <dt class="govuk-summary-list__key">
-      Started caring for the person (for 35 hours a week or more)
-    </dt>
-    <dd class="govuk-summary-list__value">
-      22 December 2020
-    </dd>
+      <div class="govuk-summary-list__row">
+        <dt class="govuk-summary-list__key">
+          Carer lives at same address?
+        </dt>
+        <dd class="govuk-summary-list__value">
+          Yes
+        </dd>
 
-  </div>
-  <div class="govuk-summary-list__row">
-    <dt class="govuk-summary-list__key">
-      Stopped caring for the person
-    </dt>
-    <dd class="govuk-summary-list__value">
-      11 January 2020
-    </dd>
+      </div>
+      <div class="govuk-summary-list__row">
+        <dt class="govuk-summary-list__key">
+          Started caring for person (for 35 hours a week or more)
+        </dt>
+        <dd class="govuk-summary-list__value">
+          22 December 2020
+        </dd>
 
-  </div>
+      </div>
+      <div class="govuk-summary-list__row">
+        <dt class="govuk-summary-list__key">
+          Stopped caring for the person
+        </dt>
+        <dd class="govuk-summary-list__value">
+          11 January 2020
+        </dd>
 
-</dl>
+      </div>
+
+    </dl>
 </div>
 </div>
 
