--- a/app/views/my-tasks-using-tl/in-progress-2/check-disable-details.html
+++ b/app/views/my-tasks-using-tl/in-progress-2/check-disable-details.html
@@ -110,7 +110,7 @@
             Priority
           </dt>
           <dd class="govuk-summary-list__value">
-            Very High
+            Very high
           </dd>
 
         </div>
