--- a/app/views/my-tasks-using-tl/in-progress-2/escalate-confirm-answers.html
+++ b/app/views/my-tasks-using-tl/in-progress-2/escalate-confirm-answers.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  Confirm escalation details
+  Confirm details
 {% endblock %}
 
 {% block header %}
@@ -112,7 +112,7 @@
             Priority
           </dt>
           <dd class="govuk-summary-list__value">
-            Very High
+            Very high
           </dd>
 
         </div>
