--- a/app/views/my-tasks-using-tl/in-progress-2/escalate-this-task.html
+++ b/app/views/my-tasks-using-tl/in-progress-2/escalate-this-task.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  Escalate task
+  Refer task to a decision maker or team leader
 {% endblock %}
 
 {% block pageScripts %}
