--- a/app/views/my-tasks-using-tl/in-progress/escalate-this-task.html
+++ b/app/views/my-tasks-using-tl/in-progress/escalate-this-task.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  Escalate task
+Refer task to a decision maker or team leader
 {% endblock %}
 
 {% block pageScripts %}
@@ -178,7 +178,7 @@
     <div class="govuk-grid-column-two-thirds">
 
       <h1 class="govuk-heading-xl">
-        Refer to a decision maker or team leader
+        Refer task to decision maker or team leader
       </h1>
 
 
