--- a/app/views/my-tasks-using-tl/in-progress/verify-non-employment.html
+++ b/app/views/my-tasks-using-tl/in-progress/verify-non-employment.html
@@ -125,10 +125,10 @@
         <a href="cancel-this-task">Cancel task</a>
       </p>
       <p>
-        <a href="assign-this-task">Assign toteam member</a>
+        <a href="assign-this-task">Assign task to team member</a>
       </p>
       <p>
-        <a href="escalate-this-task">Refer to decision maker or team leader</a>
+        <a href="escalate-this-task">Refer task to decision maker or team leader</a>
       </p>
 
     </div>
