--- a/app/views/my-tasks/claim-details/bluezone-process-1.html
+++ b/app/views/my-tasks/claim-details/bluezone-process-1.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  I can't do this task
+  Update ceased to care details
 {% endblock %}
 
 
@@ -87,7 +87,7 @@
   <div class="govuk-error-summary__body">
     <ul class="govuk-list govuk-error-summary__list">
       <li>
-        <a href="#no-reason-error">Select option</a>
+        <a href="#no-reason-error">Select an option</a>
       </li>
     </ul>
   </div>
@@ -120,7 +120,7 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-full">
 
-
+   <p class="govuk-heading-m">Person being cared information</p>
 <dl class="govuk-summary-list">
   <div class="govuk-summary-list__row">
     <dt class="govuk-summary-list__key" style="width:60%;">
@@ -142,13 +142,16 @@
   </div>
   <div class="govuk-summary-list__row">
     <dt class="govuk-summary-list__key">
-      Date of birth
+      Date of birth of the person cared for
     </dt>
     <dd class="govuk-summary-list__value">
       14 April 1971
     </dd>
 
   </div>
+  <br><br>
+   <p class="govuk-heading-m">Carer information</p>
+
   <div class="govuk-summary-list__row">
     <dt class="govuk-summary-list__key">
       Carer lives at same address?
