--- a/app/views/my-tasks/in-progress-2/assign-task-confirm-answers.html
+++ b/app/views/my-tasks/in-progress-2/assign-task-confirm-answers.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  Confirm assigning details
+  Confirm details
 {% endblock %}
 
 {% block header %}
