--- a/app/views/my-tasks/in-progress-2/cancel-this-task.html
+++ b/app/views/my-tasks/in-progress-2/cancel-this-task.html
@@ -94,7 +94,7 @@
     <div class="govuk-grid-column-two-thirds">
 
       <h1 class="govuk-heading-xl">
-        Cancel this task
+        Cancel task
       </h1>
 
 
@@ -157,7 +157,7 @@
                   Priority
                 </dt>
                 <dd class="govuk-summary-list__value">
-                  Very High
+                  Very high
                 </dd>
 
               </div>
