--- a/app/views/my-tasks/in-progress-2/escalate-confirm-answers.html
+++ b/app/views/my-tasks/in-progress-2/escalate-confirm-answers.html
@@ -112,7 +112,7 @@
             Priority
           </dt>
           <dd class="govuk-summary-list__value">
-            Very High
+            Very high
           </dd>
 
         </div>
@@ -195,7 +195,7 @@
         <input type="hidden" name="answers-checked" value="true">
 
         <button type="submit" class="govuk-button" data-module="govuk-button">
-          Escalate this task
+          Escalate  task
         </button>
 
       </form>
