--- a/app/views/my-tasks-using-tl/in-progress/cancel-this-task.html
+++ b/app/views/my-tasks-using-tl/in-progress/cancel-this-task.html
@@ -1,7 +1,8 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  Question page
+Cancel task
+
 {% endblock %}
 
 {% block pageScripts %}
@@ -94,7 +95,7 @@
     <div class="govuk-grid-column-two-thirds">
 
       <h1 class="govuk-heading-xl">
-        Cancel this task
+        Cancel task
       </h1>
 
 
