--- a/app/views/my-tasks/in-progress/escalate-confirm-answers.html
+++ b/app/views/my-tasks/in-progress/escalate-confirm-answers.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  Confirm escalation details
+  Confirm details
 {% endblock %}
 
 {% block header %}
