--- a/app/views/my-tasks-using-tl/claim-details/check-claim-details.html
+++ b/app/views/my-tasks-using-tl/claim-details/check-claim-details.html
@@ -70,8 +70,8 @@
             Status
           </dt>
           <dd class="govuk-summary-list__value">
-            <strong class="govuk-tag govuk-tag--grey">
-              To-do
+            <strong class="govuk-tag govuk-tag--yellow">
+              Not started
             </strong>
           </dd>
 
