--- a/app/views/my-tasks-using-tl/task-list-no-verify-address.html
+++ b/app/views/my-tasks-using-tl/task-list-no-verify-address.html
@@ -56,7 +56,7 @@
   </div>
   <div class="govuk-notification-banner__content">
     <p class="govuk-notification-banner__heading">
-      Task removed from your list
+      Task removed from your task list
     </p>
     <p class="govuk-body">Reason: {{ data['reason-for-not-doing-task'] | default('No reason provided') }}</p>
   </div>
