--- a/app/views/my-tasks/address-verify/bluezone-process.html
+++ b/app/views/my-tasks/address-verify/bluezone-process.html
@@ -53,12 +53,18 @@
         Task page
       </h1>
 
-      <p>This will be start page in the task completion process.  </p>
-      <br>
-      <p><strong>End of an task</strong><br> You may be directed to an 'end this task' page once the task is completed.
+      <p class="govuk-caption-l">Relevant description of task appears here</p>
 
-      <br>
-      <br>
+     <br><br><br>
+     <p>
+
+
+   <strong>Task journey and completion</strong><br>
+   </p><p>
+   You may be directed to an existing sytem to finish the task journey and may be directed to 'end this task' page once the task is completed. </p>
+
+   <br><br>
+
 
       <a href="/my-tasks/task-list">Go to tasks page </a></p>
     </div>
