--- a/app/views/my-tasks/in-progress-2/assign-this-task.html
+++ b/app/views/my-tasks/in-progress-2/assign-this-task.html
@@ -375,7 +375,7 @@
 
 
         <select id="assign-team-member-select" class="govuk-select" name="assign-team-member" >
-          <option value="no-member" selected>Select team member</option>
+          <option value="no-member" selected>-- Select --</option>
           <option value="Andrew Hardy" >Andrew Hardy</option>
           <option value="Anjita Lamzel" >Anjita Lamzel </option>
           <option value="Benson Kemi" >Benson Kemi</option>
@@ -397,7 +397,7 @@
       <!-- Notes -->
       <div class="govuk-form-group" id="more-notes-section">
         <label class="govuk-label" for="escalate-notes">
-          Notes
+          Enter notes
         </label>
 
         <!-- Field Error - Start -->
@@ -430,7 +430,7 @@
       <div class="govuk-checkboxes__item">
         <input class="govuk-checkboxes__input" id="contact" name="contact" type="checkbox" value="email" data-aria-controls="conditional-contact">
         <label class="govuk-label govuk-checkboxes__label" for="contact">
-          Add to 'Assigned by me' list to follow progress of this task.
+          Add task to 'Assigned by me' list to follow progress
         </label>
       </div>
 
