--- a/app/views/my-tasks/task-list-cancel-check-disabled-details.html
+++ b/app/views/my-tasks/task-list-cancel-check-disabled-details.html
@@ -58,7 +58,7 @@
   </div>
   <div class="govuk-notification-banner__content">
     <p class="govuk-notification-banner__heading">
-      Task canceled and removed from your list
+      Task cancelled and removed from your in-progress list
     </p>
     <p class="govuk-body">Reason: {{ data['more-detail'] | default('No reason provided') }}</p>
   </div>
