--- a/app/views/my-tasks/task-list-no-claim-details.html
+++ b/app/views/my-tasks/task-list-no-claim-details.html
@@ -57,7 +57,7 @@
   </div>
   <div class="govuk-notification-banner__content">
     <p class="govuk-notification-banner__heading">
-      Task removed from your list
+      Task removed from your to-do list
     </p>
     <p class="govuk-body">Reason: {{ data['reason-for-not-doing-task-2'] | default('No reason provided') }}</p>
   </div>
@@ -68,7 +68,6 @@
   <div class="govuk-grid-column-two-thirds" style="width:65%;">
     <h1 class="govuk-heading-xl">
       My tasks
-      <!-- <span class="govuk-body"><a href="/my-tasks/task-list-alternative">Alternate option</a></span> -->
     </h1>
   </div>
   <div class="govuk-grid-column-one-thirds" >
