--- a/app/views/my-tasks-using-tl/in-progress-2/escalate-confirm-answers.html
+++ b/app/views/my-tasks-using-tl/in-progress-2/escalate-confirm-answers.html
@@ -195,7 +195,7 @@
         <input type="hidden" name="answers-checked" value="true">
 
         <button type="submit" class="govuk-button" data-module="govuk-button">
-          Escalate this task
+          Refer task
         </button>
 
       </form>
