--- a/app/views/my-tasks-using-tl/task-list-no-claim-details.html
+++ b/app/views/my-tasks-using-tl/task-list-no-claim-details.html
@@ -57,7 +57,7 @@
   </div>
   <div class="govuk-notification-banner__content">
     <p class="govuk-notification-banner__heading">
-      Task removed from your list
+      Task removed from your task list
     </p>
     <p class="govuk-body">Reason: {{ data['reason-for-not-doing-task-2'] | default('No reason provided') }}</p>
   </div>
